--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3.8'
 
 services:
   backend:
-    image: bodyup_api:latest
+    image: proteinpro_api:latest
     ports:
         - '8780:8080'
